--- a/home.html
+++ b/home.html
@@ -78,6 +78,10 @@
         <div class="avatar"><i class="fa-solid fa-info-circle"></i></div>
         <a href="about.html" class="avatarName">About</a>
       </div>
+      <div class="wrapper" id="logout-wrapper">
+        <div class="avatar"><i class="fa-solid fa-right-from-bracket"></i></div>
+        <span class="avatarName">Logout</span>
+      </div>
     </div>
     <div class="blogs" id="blogging">
     </div>
@@ -119,7 +123,9 @@
         <p id="members">User 1</p>
       </div>
     </div>
-    <script src="./javascript/home.js" type="module"></script>
+  </div>
+
+  <script src="./javascript/home.js" type="module"></script>
 </body>
 
 </html>
