--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   </div>
 
   <script src="./javascript/app.js" type="module"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
